--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,11 @@
         "symfony/routing": "^4.0",
         "api-platform/core": "^2.1"
     },
+    "autoload": {
+        "psr-4": {
+            "Socle\\AccentBundle\\": "src/"
+        }
+    },
     "license": "MIT",
     "authors": [
         {
