--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,7 @@
         }
     ],
     "require-dev": {
-        "phpstan/phpstan": "^0.11.1"
+        "phpstan/phpstan": "^0.11.1",
+        "friendsofphp/php-cs-fixer": "^2.14"
     }
 }
