--- a/composer.json
+++ b/composer.json
@@ -1,15 +1,19 @@
 {
-    "name": "socle/accent-bundle",
+    "name": "forge/accent-bundle",
     "description": "Access Control Checker Easy Neat Thorough",
     "type": "static-analysis-tool",
     "require": {
         "php": "^7.1",
+        "symfony/config": "^4.0",
+        "symfony/console": "^4.0",
+        "symfony/dependency-injection": "^4.0",
+        "symfony/http-kernel": "^4.0",
         "symfony/routing": "^4.0",
         "api-platform/core": "^2.1"
     },
     "autoload": {
         "psr-4": {
-            "Socle\\AccentBundle\\": "src/"
+            "Forge\\AccentBundle\\": "src/"
         }
     },
     "license": "MIT",
@@ -18,5 +22,9 @@
             "name": "Paul Molin",
             "email": "paulm@theodo.fr"
         }
-    ]
+    ],
+    "require-dev": {
+        "phpstan/phpstan": "^0.11.1",
+        "friendsofphp/php-cs-fixer": "^2.14"
+    }
 }
