--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
         "symfony/dependency-injection": "^4.0|^5.0",
         "symfony/http-kernel": "^4.0|^5.0",
         "symfony/routing": "^4.0|^5.0",
-        "api-platform/core": ">=2.1.0 <2.5.0"
+        "api-platform/core": "^2.5"
     },
     "autoload": {
         "psr-4": {
