--- a/composer.json
+++ b/composer.json
@@ -4,11 +4,11 @@
     "type": "symfony-bundle",
     "require": {
         "php": "^7.1|^8.0",
-        "symfony/config": "^4.0|^5.0",
-        "symfony/console": "^4.0|^5.0",
-        "symfony/dependency-injection": "^4.0|^5.0",
-        "symfony/http-kernel": "^4.0|^5.0",
-        "symfony/routing": "^4.0|^5.0",
+        "symfony/config": "^4.0|^5.0|^6.0",
+        "symfony/console": "^4.0|^5.0|^6.0",
+        "symfony/dependency-injection": "^4.0|^5.0|^6.0",
+        "symfony/http-kernel": "^4.0|^5.0|^6.0",
+        "symfony/routing": "^4.0|^5.0|^6.0",
         "api-platform/core": "^2.5"
     },
     "autoload": {
