--- a/composer.json
+++ b/composer.json
@@ -3,13 +3,13 @@
     "description": "Access Control Checker Easy Neat Thorough",
     "type": "symfony-bundle",
     "require": {
-        "php": "^7.1|^8.0",
-        "symfony/config": "^4.0|^5.0|^6.0",
-        "symfony/console": "^4.0|^5.0|^6.0",
-        "symfony/dependency-injection": "^4.0|^5.0|^6.0",
-        "symfony/http-kernel": "^4.0|^5.0|^6.0",
-        "symfony/routing": "^4.0|^5.0|^6.0",
-        "api-platform/core": "^2.5"
+        "php": "^8.0",
+        "symfony/config": "^6.0",
+        "symfony/console": "^6.0",
+        "symfony/dependency-injection": "^6.0",
+        "symfony/http-kernel": "^6.0",
+        "symfony/routing": "^6.0",
+        "api-platform/core": "^3.0"
     },
     "autoload": {
         "psr-4": {
